# src/app.js
@@ -1,39 +1,19 @@
 const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const swaggerFile = require('../swagger-output.json');
+const apiRoutes = require('./routes/apiRoutes');
 const authRoutes = require('./routes/authRoutes');
-const productRoutes = require('./routes/productRoutes');
+const categoriaRoutes = require('./routes/categoriaRoutes');
 
 const app = express();
 
 app.use(express.json());
 
-// Protecao contra NoSQL Injection
-app.use((req, res, next) => {
-  const sanitize = (obj) => {
-    if (!obj || typeof obj !== 'object') {
-      return;
-    }
-
-    for (const key in obj) {
-      if (key.startsWith('$')) {
-        delete obj[key];
-      } else if (obj[key] && typeof obj[key] === 'object') {
-        sanitize(obj[key]);
-      }
-    }
-  };
-
-  if (req.body) sanitize(req.body);
-  if (req.query) sanitize(req.query);
-  next();
-});
-
-// Rota da documentação Swagger
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
+app.use('/api', apiRoutes);
 app.use('/api/auth', authRoutes);
-app.use('/api/products', productRoutes);
+app.use('/api/categorias', categoriaRoutes);
 
 app.get('/', (req, res) => {
   res.json({ message: 'API Catalogo de Produtos funcionando!' });
